--- a/index.html
+++ b/index.html
@@ -64,6 +64,17 @@
     </section>
     <section id="about" class="about section_indent_l">
       <div class="container">
+        <iframe
+  id="inlineFrameExample"
+  title="Inline Frame Map"
+  width="560"
+  height="400"
+  frameborder="1"
+  allowfullscreen="true"
+  src="http://localhost:3000/oks-gaz-pay/"
+>
+</iframe>
+
         <h2 class="section-title section-title_indent_s about__title">О нас</h2>
         <p class="about__description">Также как перспективное планирование создаёт необходимость включения
           в производственный план целого ряда внеочередных мероприятий с учётом комплекса экспериментов, поражающих
